'erc-emacs-build-time'.

---
** Emacs can now be built with support for Little CMS.

If the lcms2 library is installed, Emacs will enable features built on
top of that library.  The new configure option '--without-lcms2' can
be used to build without lcms2 support even if it is installed.  Emacs
linked to Little CMS exposes color management functions in Lisp: the
color metrics 'lcms-cie-de2000' and 'lcms-cam02-ucs'.

** The configure option '--with-gameuser' now defaults to 'no',
as this appears to be the most common configuration in practice.
When it is 'no', the shared game directory and the auxiliary program
update-game-score are no longer needed and are not installed.

** Emacs no longer works on IRIX.  We expect that Emacs users are not
affected by this, as SGI stopped supporting IRIX in December 2013.


* Startup Changes in Emacs 26.1

+++
** New option '--fg-daemon'.  This is the same as '--daemon', except
it runs in the foreground and does not fork.  This is intended for
modern init systems such as systemd, which manage many of the traditional
aspects of daemon behavior themselves.  '--bg-daemon' is now an alias
for '--daemon'.

+++
** New option '--module-assertions'.
When given this option, Emacs will perform expensive correctness
checks when dealing with dynamic modules.  This is intended for module
authors that wish to verify that their module conforms to the module
requirements.  The option makes Emacs abort if a module-related
assertion triggers.

+++
** Emacs now supports 24-bit colors on capable text terminals
Terminal is automatically initialized to use 24-bit colors if the
required capabilities are found in terminfo.  See the FAQ node
"Colors on a TTY" for more information.

+++
** Emacs now obeys the X resource "scrollBar" at startup.
The effect is similar to that of "toolBar" resource on the tool bar.


* Changes in Emacs 26.1

+++
** Option 'buffer-offer-save' can be set to new value, 'always'.  When